crates/rcc_driver/tests/ui/parse/missing_eq_designator.stderr
Error: expected `=` after designator chain
   ╭─[ crates/rcc_driver/tests/ui/parse/missing_eq_designator.c:1:16 ]
   │
 1 │ int a[] = {[0] 42};
───╯
