crates/rcc_driver/tests/ui/parse/missing_eq_designator.c
int a[] = {[0] 42};
